Bug 268237 - REGRESSION (273506@main): Going back to a PDF file fails to render the PDF
Summary: REGRESSION (273506@main): Going back to a PDF file fails to render the PDF
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: PDF (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-27 16:28 PST by Simon Fraser (smfr)
Modified: 2024-01-27 19:33 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2024-01-27 16:28:20 PST
Steps:
1. Disable UnifiedPDF
2. Load a simple web page (e.g. smfr.org)
3. Via the url bar, load https://www.smcgov.org/media/72866/download?inline
4. Go Back
5. Go Forward

The PDF fails to load; you just see the gray background.
Comment 1 Radar WebKit Bug Importer 2024-01-27 16:28:33 PST
<rdar://problem/121757735>
Comment 2 Simon Fraser (smfr) 2024-01-27 16:30:42 PST
Pull request: https://github.com/WebKit/WebKit/pull/23369
Comment 3 EWS 2024-01-27 19:33:27 PST
Committed 273614@main (32f6aad73de0): <https://commits.webkit.org/273614@main>

Reviewed commits have been landed. Closing PR #23369 and removing active labels.