REGRESSION (273506@main): Going back to a PDF file fails to render the PDF https://bugs.webkit.org/show_bug.cgi?id=268237 rdar://121757735

Reviewed by Tim Horton.

In the refactoring in 273506@main, the loading fallback for non-linearized PDF lost
the check of `m_incrementalPDFLoadingEnabled`. Without that, we never create the
PDF document in the fallback case, for some loading timings.

Not currently testable.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::streamDidFinishLoading):

Canonical link: https://commits.webkit.org/273614@main